--- a/fase2/fase2.css
+++ b/fase2/fase2.css
@@ -131,7 +131,7 @@ td {
 #gametable {
     position: absolute;
     background-size: cover;
-    background-image: url('../imgs/floresta.png'); 
+    background-image: url('../imgs/cenario\ 2.png'); 
     left: 350px;
 }
 
