--- a/fase1/fase1.css
+++ b/fase1/fase1.css
@@ -9,7 +9,16 @@
     border-radius: 5px;
     z-index: 1;
 }
-
+#monster-count {
+    position: absolute;
+    top: 20px;
+    left: 360px;
+    background-color: rgba(255, 179, 0, 0.8);
+    padding: 10px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    z-index: 1;
+}
 /* Estilos para a vida */
 #life {
     position: absolute;
